2008-12-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* support.c:
	Fixed [ 2391132 ] Check for empty string in decode64
	(patch by J. Bart Whitely)

2008-11-21 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* classProviderGz.c:
	Fixed [ 2192023 ] sfcb deadlocks on nsHt initialization
	(patch from Klaus Kaempf)

2008-11-21 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* instance.c:
		[ 2021888 ] Bug in creating CIM instance
			Patch from Luong Nguyen-Duy

2008-11-18 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimXmlParser.c cimcClientSfcbLocal.c configure.ac test/Makefile.am 
		test/wbemcli/Makefile.am test/wbmecli/check_errors.pl:
		Fixed [ 2042150 ] Mismatched CMPI error code and error message
			(patch from Tyrel Datwyler)
		Added optional wbemcli test directory

2008-11-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimXmlParser.c test/unittest/xmlUnescape.c 
		test/unittest/Makefile.am:
		Fixed [ 2169807 ] XML parser does not handle all character references
			(patch from Norm Paxton)

2008-11-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am configure.ac:
		Reverted [ 2192030 ] adapt to autoconf 2.63, automake 1.10
			Patch causes problems with older versions

2008-11-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c:
		Fixed [ 2193250 ] No data in http request causes segfault.
			Don't generate error entries.

2008-11-07  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c httpAdapter.c httpComm.c
		objectImplSwapI32toP32.c queryParser.y selectcond.c
		selectcond.c sfcbdumpP32onI32.c:
		Fixed [ 2168840 ] Fix various compiler warnings.
		(patch from J. Bart Whitely)

2008-11-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* configure.ac httpAdapter.c sfcBroker.c:
		Fixed [ 2226259 ] Make UDS Authentication optional

2008-11-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c:
		Fixed [ 2192053 ] _methProvider return value not checked propery